apps/order-service/deployment-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-order
  labels:
    app: ms-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-order
  template:
    metadata:
      labels:
        app: ms-order
    spec:
      containers:
      - name: ms-order
        image: marcoschalet/order-service:v1.0.0
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "280Mi"
            cpu: "0.35"
          requests:
            memory: "180Mi"
            cpu: "0.2"
