apps/order-service/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:15.5-alpine
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.2"
          requests:
            memory: "30Mi"
            cpu: "0.05"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-persistent-storage
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: database-order-pvc
