apps/order-service/service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    run: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: database
