apps/order-service/service-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-order
  labels:
    run: ms-order
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: ms-order
