apps/order-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  labels:
    app: order
  annotations:
    konghq.com/plugins: rate-limiting
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /create-order
        pathType: Prefix
        backend:
          service:
            name: ms-order
            port:
              number: 80
